--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -613,7 +613,6 @@ footer article section {
     text-align: center;
     padding: 30px;
     min-height: 13vh;
-    background: #EDF0F5;
 }
 
 .marginless {
@@ -637,6 +636,17 @@ footer article section {
     cursor: pointer;
     border: 2px solid #133783;
     align-self: center;
+}
+
+.userDetails{
+    background: #F6F7F9;
+    border: 3px #DFE0E4;
+    border-radius: 75px;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 30px;
+    margin-top: 30px;
 }
 
 .user-titulodescricao {
