Adicionar link para perfil do top3 em pontuação

--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -384,6 +384,9 @@ criar-quiz {
     justify-content: space-between;
     list-style: none;
 }
+.pontuacao-resultado-li > * {
+    align-self: center;
+}
 
 .pontuacao-resultado-foto {
     max-height: 50px;
