--- a/Unico teste real da internet/css/style.css
+++ b/Unico teste real da internet/css/style.css
@@ -423,7 +423,10 @@ criar-quiz {
     display: flex;
     justify-content: center;
 }
-
+.flexAround{
+    display: flex;
+    justify-content: space-around;
+}
 .justified-text {
     display: flex;
     justify-content: space-between;
@@ -432,7 +435,9 @@ criar-quiz {
 .aligned-center {
     align-self: center;
 }
-
+.MEGA{
+    font-size: 3rem;
+}
 .valor {
     margin-left: 5px;
     padding-left: 2px;
@@ -449,6 +454,7 @@ ol {
 ol .nome {
     padding-top: 2px;
     padding-bottom: 2px;
+    width: 40%;
 }
 
 .home-container {
@@ -458,11 +464,17 @@ ol .nome {
 
 .ranking-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .ranking-container ol {
-    width: 20vw;
+    width: 40%;
+    margin-right:30%;
+    margin-left:30%;
+    padding: 20px;
+    border: 3px solid #4d68a1;
+    background: #ffffff;
+    border-radius: 70px;
 }
 
 * {
