--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -16,6 +16,7 @@ textarea {
 .leftpart {
     display: flex;
     padding: 0.2rem;
+    width:100%;
 }
 
 i.fa.fa-certificate {
@@ -66,32 +67,33 @@ i.fa.fa-certificate {
     font-size: 1.3rem;
     color: #ffffff;
     font-weight: bolder;
-    align-self: center;
+    margin-top:0.25%;
 }
 
 .quizSearch>input {
-    border: 2px solid #133783;
     border-radius: 10px;
     padding: 0.1rem;
     height: 2rem;
-    width: 280px;
+    color:#1d2129;
+    width: 300px;
+    
 }
 
 .quizSearch>button {
     padding: 0.1rem;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: #ffffff;
-    color: #4d68a1;
+    opacity: 0.6;
+    color: #1d2129;
     cursor: pointer;
-    border: 2px solid #133783;
+    background-color:#ffffff;
+    position:relative;
+    right:13%;
+    border-radius: 75%;
 }
 
 .quizSearch>button:hover {
     color: #ffffff;
     background: #133783;
-    border: #ffffff 2px solid;
+    opacity:1;
 }
 
 .pagebuttons {
@@ -498,12 +500,17 @@ ol .nome {
     box-sizing: border-box;
 }
 
+html, a, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+    
+    font-family: 'Klavika', serif;
+}
 body {
     margin: 0;
     background: #EDF0F5;
     color: black;
-    font-family: 'Klavika';
     display: flex;
+    font-family: 'Klavika';
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
@@ -527,13 +534,7 @@ header {
     display: flex;
     padding-top: 10px;
     padding-left: 10px;
-    background: #4d68a1;
-    background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
-    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
-    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
-    border-bottom: 1px solid #133783;
-    justify-content: space-between;
+    background: #4267b2;
 }
 
 header input:required {
@@ -554,6 +555,7 @@ header a:visited {
 
 header .logo {
     font-size: 2.3rem;
+    justify-content: left;
 }
 
 .profile-info {
@@ -561,6 +563,8 @@ header .logo {
     display: flex;
     font-weight: bolder;
     flex-flow: row nowrap;
+    position: relative;
+    left:6.5%;
 }
 
 .profile-pic {
@@ -667,15 +671,10 @@ footer {
     flex-flow: column;
     justify-content: space-between;
     position: relative;
-    width: 100vw;
-    background: #4d68a1;
-    background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
-    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
-    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
-    border-top: 1px solid #133783;
+    background: #4267b2;
     color: white;
     align-self: flex-end;
+    width: 100%;
 }
 
 footer article {
@@ -686,15 +685,9 @@ footer article {
 footer .copyright {
     display: flex;
     text-decoration: underline;
-    background: #3f5c9a;
-    background: -moz-linear-gradient(top, #3f5c9a 0%, #3e5b99 100%);
-    background: -webkit-linear-gradient(top, #3f5c9a 0%, #3e5b99 100%);
-    background: linear-gradient(to bottom, #3f5c9a 0%, #3e5b99 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f5c9a', endColorstr='#3e5b99', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f5c9a', endColorstr='#214896', GradientType=0);
+    background: #4267b2;
     justify-content: flex-start;
     font-style: italic;
-    margin-left: 30px;
     margin-bottom: 3px;
 }
 
@@ -761,7 +754,7 @@ footer article section {
     height: 30px;
     border-radius: 50%;
     background: #ffffff;
-    color: #4d68a1;
+    color: #4267b2;
     cursor: pointer;
     border: 2px solid #133783;
     align-self: center;
@@ -984,7 +977,7 @@ button.resposta-button-inline {
         bottom: 30px;
         right: 20px;
         padding: 20px;
-        background: #4d68a1;
+        background: #4267b2;
         border-radius: 50%;
     }
     .mobile-signin>* {
