--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -947,6 +947,10 @@ button.resposta-button-inline {
     from{opacity:0; overflow:none; width: 0px; height: 0px; padding: 0px;}
     to{opacity:1; overflow:auto; width:600px; height:80vh; padding:70px 70px 0 70px}
 }
+@keyframes fechar-modal{
+    from{opacity:1; overflow:auto; width:600px; height:80vh; padding:70px 70px 0 70px}
+    to{opacity:0; overflow:none; width: 0px; height: 0px; padding: 0px;}
+}
 
 @media screen and (max-width: 1015px) {
     .user-quiz {
