--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -16,12 +16,14 @@ textarea {
 .leftpart {
     display: flex;
     padding: 0.2rem;
+    width: 100%;
 }
+
 i.fa.fa-certificate {
     font-size: small;
 }
 
-.fa-random{
+.fa-random {
     transform: rotate(270deg);
 }
 
@@ -51,13 +53,13 @@ i.fa.fa-certificate {
     justify-content: center;
 }
 
-.iconeResposta{
+.iconeResposta {
     color: #ffffff;
     height: 20px;
     width: 20px;
 }
 
-.labelNota{
+.labelNota {
     margin-right: 5px;
 }
 
@@ -65,22 +67,30 @@ i.fa.fa-certificate {
     cursor: pointer;
 }
 
-.quizSearch{
-    font-size: 1.3rem;
-    color: #ffffff;
+.quizSearch {
     font-weight: bolder;
-    align-self: center;
+    margin-top: 1.3%;
+    padding-left: 6.5%;
 }
 
-.quizSearch>input {
-    border: 2px solid #133783;
-    border-radius: 10px;
+.quizSearch-input {
+    height: 2.3rem;
+    width: 330px;
+    font-size: 1.5rem;
+}
+
+.quizSearch-button {
+    font-size: 1.3rem;
     padding: 0.1rem;
-    height: 2rem;
-    width: 280px;
+    color: #4d68a1;
+    cursor: pointer;
+    background-color: #ffffff;
+    position: relative;
+    right: 6.5%;
 }
 
-.quizSearch>button {
+.tag-search-button {
+    font-size: 1.3rem;
     padding: 0.1rem;
     width: 30px;
     height: 30px;
@@ -89,9 +99,12 @@ i.fa.fa-certificate {
     color: #4d68a1;
     cursor: pointer;
     border: 2px solid #133783;
+    position: relative;
+    right: 5%;
+    top: 1%;
 }
 
-.quizSearch>button:hover {
+.tag-search-button:hover {
     color: #ffffff;
     background: #133783;
     border: #ffffff 2px solid;
@@ -119,16 +132,17 @@ i.fa.fa-certificate {
     margin-bottom: 10px;
 }
 
-.textBox{
+.textBox {
     width: 100%;
 }
 
-*{
+* {
     word-wrap: break-word;
 }
+
 .title {
     text-align: center;
-    color: #365CAB;
+    color: #4d68a1;
     font-size: 2.3rem;
     margin-left: 5vw;
     margin-right: 5vw;
@@ -140,7 +154,7 @@ i.fa.fa-certificate {
     text-align: center;
 }
 
-.modalidade i{
+.modalidade i {
     font-size: 2rem;
     margin-right: 5px;
     text-align: left;
@@ -163,7 +177,7 @@ i.fa.fa-certificate {
     background: white;
     border: 1px #DFE0E4 solid;
     border-radius: 5px;
-    color: #365CAB;
+    color: #4d68a1;
 }
 
 .opcoes {
@@ -178,7 +192,7 @@ i.fa.fa-certificate {
 
 .randomQuizzes {
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;
     text-align: center;
     flex-wrap: wrap;
 }
@@ -211,7 +225,7 @@ criar-quiz {
     margin-right: 5%;
 }
 
-.quizAnchor .quiztitle{
+.quizAnchor .quiztitle {
     margin-bottom: 10px;
     height: 40px;
 }
@@ -248,10 +262,10 @@ criar-quiz {
     opacity: 0;
     margin: 0;
     overflow: hidden;
-    max-height: 0;    
+    max-height: 0;
 }
 
-.modalidade-desc-active {    
+.modalidade-desc-active {
     opacity: 1;
     margin: initial;
     max-height: 1000px;
@@ -267,7 +281,7 @@ criar-quiz {
 
 .title {
     font-weight: bolder;
-    color: #365CAB;
+    color: #4d68a1;
     text-decoration: none;
     font-size: 2.7rem;
     text-align: center;
@@ -297,19 +311,17 @@ criar-quiz {
     justify-content: flex-start;
 }
 
-.quizBox>div .modalidade{
+.quizBox>div .modalidade {
     align-self: flex-end;
     margin-bottom: 0;
 }
 
-
-.quizBox:hover .resumo{
+.quizBox:hover .resumo {
     opacity: 1;
 }
 
-.quizBox .resumo{
+.quizBox .resumo {
     opacity: 0;
-
     margin-left: 7px;
     margin-right: 10px;
     box-shadow: 4px 4px 4px grey;
@@ -323,8 +335,6 @@ criar-quiz {
     padding-bottom: 2px;
     min-height: 12vh;
     max-width: 85%;
-
-
     -o-transition: opacity .5s ease-in-out;
     -ms-transition: opacity .5s ease-in-out;
     -moz-transition: opacity .5s ease-in-out;
@@ -332,7 +342,7 @@ criar-quiz {
     transition: opacity .5s ease-in-out;
 }
 
-.tags{
+.tags {
     font-size: 0.6rem;
     width: 100%;
     display: flex;
@@ -344,9 +354,9 @@ criar-quiz {
     height: 50px;
 }
 
-.tags>a{
+.tags>a {
     background: #C6EFFF;
-    border:#4d68a1 1px solid;
+    border: #4d68a1 1px solid;
     border-radius: 10px;
     padding: 2px;
     margin-right: 5px;
@@ -390,8 +400,8 @@ criar-quiz {
 .resultado-box {
     width: 100%;
     display: flex;
-    flex-direction: column;   
-    justify-content: flex-start; 
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .resultado-head {
@@ -415,7 +425,7 @@ criar-quiz {
     text-align: center;
 }
 
-.resultadoHead{
+.resultadoHead {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -426,7 +436,7 @@ criar-quiz {
     text-align: center;
     list-style: none;
     color: #365CAB;
-     margin-bottom: 12px; 
+    margin-bottom: 12px;
 }
 
 .pontuacao-resultado {
@@ -441,7 +451,8 @@ criar-quiz {
     justify-content: space-between;
     list-style: none;
 }
-.pontuacao-resultado-li > * {
+
+.pontuacao-resultado-li>* {
     align-self: center;
 }
 
@@ -450,7 +461,7 @@ criar-quiz {
     width: 50px;
 }
 
-.top3Quiz{
+.top3Quiz {
     width: 60%;
     align-self: center;
     text-align: center;
@@ -480,10 +491,12 @@ criar-quiz {
     display: flex;
     justify-content: center;
 }
-.flexAround{
+
+.flexAround {
     display: flex;
     justify-content: space-around;
 }
+
 .justified-text {
     display: flex;
     justify-content: space-between;
@@ -492,9 +505,11 @@ criar-quiz {
 .aligned-center {
     align-self: center;
 }
-.MEGA{
+
+.MEGA {
     font-size: 3rem;
 }
+
 .valor {
     margin-left: 5px;
     padding-left: 2px;
@@ -526,8 +541,8 @@ ol .nome {
 
 .ranking-container ol {
     width: 40%;
-    margin-right:30%;
-    margin-left:30%;
+    margin-right: 30%;
+    margin-left: 30%;
     padding: 20px;
     border: 3px solid #4d68a1;
     background: #ffffff;
@@ -536,6 +551,16 @@ ol .nome {
 
 * {
     box-sizing: border-box;
+}
+
+html,
+a,
+button,
+input,
+select,
+textarea,
+.pure-g [class *="pure-u"] {
+    font-family: 'Klavika', serif;
 }
 
 body {
@@ -567,6 +592,8 @@ header {
     display: flex;
     padding-top: 10px;
     padding-left: 10px;
+    width: 100%;
+    overflow: hidden;
     background: #4d68a1;
     background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
     background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
@@ -577,15 +604,14 @@ header {
 }
 
 header input:required {
-    box-shadow:none;
-
+    box-shadow: none;
 }
+
 header a {
     display: flex;
     align-self: center;
     padding: 5px;
     color: white;
-    padding-right: 30px;
 }
 
 header a:visited {
@@ -594,6 +620,8 @@ header a:visited {
 
 header .logo {
     font-size: 2.3rem;
+    justify-content: left;
+    padding-left: 30px;
 }
 
 .profile-info {
@@ -601,6 +629,9 @@ header .logo {
     display: flex;
     font-weight: bolder;
     flex-flow: row nowrap;
+    position: relative;
+    left: 6.5%;
+    overflow: hidden;
 }
 
 .profile-pic {
@@ -795,7 +826,7 @@ footer article section {
     font-size: 1.1rem;
 }
 
-.user-titulodescricao button{
+.user-titulodescricao button {
     padding: 0.1rem;
     width: 30px;
     height: 30px;
@@ -806,7 +837,8 @@ footer article section {
     border: 2px solid #133783;
     align-self: center;
 }
-.userDetails{
+
+.userDetails {
     background: #F6F7F9;
     border: 3px #DFE0E4;
     border-radius: 75px;
@@ -863,7 +895,7 @@ footer article section {
     justify-content: flex-start;
 }
 
-.quiz-info > img{
+.quiz-info>img {
     max-width: 25vw;
     max-height: 25vh;
 }
@@ -959,7 +991,7 @@ button.resposta-button-inline {
     padding: 70px 70px 0 70px;
     height: 80vh;
     animation-name: abrir-modal;
-    animation-duration:0.5s;
+    animation-duration: 0.5s;
 }
 
 .foto-Edicao {
@@ -976,27 +1008,89 @@ button.resposta-button-inline {
     border: 1px solid #bdc7d8;
     border-radius: 5px;
 }
-.botao-fechar-edicao{
+
+.botao-fechar-edicao {
     font-size: 1.5rem;
-    color:#000000;
+    color: #000000;
     position: absolute;
     left: 20px;
     top: 15px;
 }
-.texto-edicao-nome{
+
+.texto-edicao-nome {
     left: 27.1px;
     position: relative;
 }
-.form-edicao-descricao{
-        resize:none
+
+.form-edicao-descricao {
+    resize: none
 }
-@keyframes abrir-modal{
-    from{opacity:0; overflow:none; width: 0px; height: 0px; padding: 0px;}
-    to{opacity:1; overflow:auto; width:600px; height:80vh; padding:70px 70px 0 70px}
+
+.friendRecommendations {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    flex-wrap: nowrap;
+    width: 70%;
+    padding: 0 0 0 22%;
 }
-@keyframes fechar-modal{
-    from{opacity:1; overflow:auto; width:600px; height:80vh; padding:70px 70px 0 70px}
-    to{opacity:0; overflow:none; width: 0px; height: 0px; padding: 0px;}
+
+.friends {
+    display: flex;
+    padding: 0.7rem;
+    flex-direction: column;
+    width: 40%;
+    margin: 0px;
+    padding: 0px 5px 0px 5px;
+
+}
+
+.friends img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    border: 3px solid #133783;
+}
+
+.botaoAmigo{
+    width: 150px;
+    background-color:transparent;
+    color:#365CAB;
+    margin-bottom:10px;
+}
+
+@keyframes abrir-modal {
+    from {
+        opacity: 0;
+        overflow: none;
+        width: 0px;
+        height: 0px;
+        padding: 0px;
+    }
+    to {
+        opacity: 1;
+        overflow: auto;
+        width: 600px;
+        height: 80vh;
+        padding: 70px 70px 0 70px
+    }
+}
+
+@keyframes fechar-modal {
+    from {
+        opacity: 1;
+        overflow: auto;
+        width: 600px;
+        height: 80vh;
+        padding: 70px 70px 0 70px
+    }
+    to {
+        opacity: 0;
+        overflow: none;
+        width: 0px;
+        height: 0px;
+        padding: 0px;
+    }
 }
 
 @media screen and (max-width: 1015px) {
@@ -1071,12 +1165,8 @@ button.resposta-button-inline {
         font-size: 1rem;
         flex-direction: column;
     }
-    header .logo {
-        font-size: 1.5rem;
-        max-width: 70vw;
-    }
     .questions {
-        width: 90vw;        
+        width: 90vw;
         margin: 5%;
         padding: 2%;
     }
