--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -286,7 +286,7 @@ criar-quiz {
     margin-left: 1%;
     margin-right: 1%;
     padding: 3px;
-    box-shadow: 8px 8px 5px rgb(150, 150, 150);
+    box-shadow: 0 0 40px 5px rgb(150, 150, 150);
 }
 
 .quizBox>div {
@@ -312,14 +312,14 @@ criar-quiz {
 
     margin-left: 7px;
     margin-right: 10px;
-    box-shadow: 4px 4px 4px grey;
+    box-shadow: 0 0 20px grey;
     border: 1px rgb(196, 196, 196) solid;
     background: rgb(255, 255, 255);
     align-self: center;
     border-radius: 5px;
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 2px;
+    padding-top: 20px;
     padding-bottom: 2px;
     min-height: 12vh;
     max-width: 85%;
