--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -293,7 +293,7 @@ criar-quiz {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 45vh;
+    height: 75%;
     justify-content: flex-start;
 }
 
@@ -322,7 +322,7 @@ criar-quiz {
     padding-top: 20px;
     padding-bottom: 2px;
     min-height: 12vh;
-    max-width: 85%;
+    width: 85%;
 
 
     -o-transition: opacity .5s ease-in-out;
