--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -1183,9 +1183,8 @@ filter:alpha(opacity=90);
     color: #365CAB;
     text-align: center;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-    background-color: rgba(0, 0, 0, 0);
-    margin: 0px 72px 0px 50px;
-
+    background-color: transparent;
+    
 }
 
 .carousel-control.left {
@@ -1247,6 +1246,7 @@ filter:alpha(opacity=90);
 .carousel-control .icon-next:before {
     content: '\203a'
 }
+
 
 .carousel-indicators {
     position: absolute;
@@ -2406,9 +2406,12 @@ filter:alpha(opacity=90);
 .leftpartRecom{
     text-align:left;
     align-self: left;
-    margin-left: 22%;
+    margin: 0 5% 0 20%;
 }
-
+.carousel-first-div{
+    width: 128px;
+    height: 404px;
+}
 @keyframes abrir-modal {
     from {
         opacity: 0;
