--- a/Unico teste real da internet/client/css/style.css
+++ b/Unico teste real da internet/client/css/style.css
@@ -17,11 +17,12 @@ textarea {
     display: flex;
     padding: 0.2rem;
 }
+
 i.fa.fa-certificate {
     font-size: small;
 }
 
-.fa-random{
+.fa-random {
     transform: rotate(270deg);
 }
 
@@ -51,13 +52,13 @@ i.fa.fa-certificate {
     justify-content: center;
 }
 
-.iconeResposta{
+.iconeResposta {
     color: #ffffff;
     height: 20px;
     width: 20px;
 }
 
-.labelNota{
+.labelNota {
     margin-right: 5px;
 }
 
@@ -65,7 +66,7 @@ i.fa.fa-certificate {
     cursor: pointer;
 }
 
-.quizSearch{
+.quizSearch {
     font-size: 1.3rem;
     color: #ffffff;
     font-weight: bolder;
@@ -120,13 +121,14 @@ i.fa.fa-certificate {
     margin-bottom: 10px;
 }
 
-.textBox{
+.textBox {
     width: 100%;
 }
 
-*{
+* {
     word-wrap: break-word;
 }
+
 .title {
     text-align: center;
     color: #365CAB;
@@ -141,7 +143,7 @@ i.fa.fa-certificate {
     text-align: center;
 }
 
-.modalidade i{
+.modalidade i {
     font-size: 2rem;
     margin-right: 5px;
     text-align: left;
@@ -159,11 +161,10 @@ i.fa.fa-certificate {
     display: flex;
     flex-direction: column;
     width: 90vw;
-    margin-top: 5vw;
     margin-bottom: 5vw;
-    background: white;
+    background: #F6F7F9;
     border: 1px #DFE0E4 solid;
-    border-radius: 5px;
+    border-radius: 0 0 15px 15px;
     color: #365CAB;
     box-shadow: 0 0 20px grey;
 }
@@ -172,15 +173,21 @@ i.fa.fa-certificate {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-top: 5vw;
+    width: 90vw;
     padding: 0.7rem;
-    background: #F6F7F9;
-    border: 1px solid #DFE0E4;
-    border-radius: 5px;
+    background: #4d68a1;
+    background: -moz-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: -webkit-linear-gradient(top, #4d68a1 0%, #3b5998 100%);
+    background: linear-gradient(to bottom, #4d68a1 0%, #3b5998 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d68a1', endColorstr='#3b5998', GradientType=0);
+    border: 1px solid #133783;
+    border-radius: 15px 15px 0 0;
 }
 
 .randomQuizzes {
     display: flex;
-    flex-direction: row;    
+    flex-direction: row;
     text-align: center;
     flex-wrap: wrap;
 }
@@ -210,14 +217,14 @@ criar-quiz {
     flex-direction: column;
     width: 40%;
     margin-left: 5%;
+    border: 2px solid #133783;
     border-radius: 20px;
     background: white;
-    box-shadow: 0 0 20px #827d7d;
     margin-right: 5%;
     margin-bottom: 5vw;
 }
 
-.quizAnchor .quiztitle{
+.quizAnchor .quiztitle {
     margin-bottom: 10px;
     height: 40px;
 }
@@ -245,8 +252,16 @@ criar-quiz {
 }
 
 .modalidade-box-active {
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 10px;
+    padding: 3%;
+    padding-bottom: 20px;
+    margin-bottom: 1vw;
+    padding-top: 0;
+    text-align: center;
+    width: 40vw;
+    align-self: center;
+    border: #133783 solid 2px;
 }
 
 .modalidade-desc {
@@ -254,10 +269,10 @@ criar-quiz {
     opacity: 0;
     margin: 0;
     overflow: hidden;
-    max-height: 0;    
+    max-height: 0;
 }
 
-.modalidade-desc-active {    
+.modalidade-desc-active {
     opacity: 1;
     margin: initial;
     max-height: 1000px;
@@ -303,19 +318,17 @@ criar-quiz {
     justify-content: flex-start;
 }
 
-.quizBox>div .modalidade{
+.quizBox>div .modalidade {
     align-self: flex-end;
     margin-bottom: 0;
 }
 
-
-.quizBox:hover .resumo{
+.quizBox:hover .resumo {
     opacity: 1;
 }
 
-.quizBox .resumo{
+.quizBox .resumo {
     opacity: 0;
-
     margin-left: 7px;
     margin-right: 10px;
     box-shadow: 0 0 20px grey;
@@ -329,8 +342,6 @@ criar-quiz {
     padding-bottom: 2px;
     min-height: 12vh;
     width: 85%;
-
-
     -o-transition: opacity .5s ease-in-out;
     -ms-transition: opacity .5s ease-in-out;
     -moz-transition: opacity .5s ease-in-out;
@@ -338,7 +349,7 @@ criar-quiz {
     transition: opacity .5s ease-in-out;
 }
 
-.tags{
+.tags {
     font-size: 0.6rem;
     width: 100%;
     display: flex;
@@ -350,9 +361,9 @@ criar-quiz {
     height: 50px;
 }
 
-.tags>a{
+.tags>a {
     background: #C6EFFF;
-    border:#4d68a1 1px solid;
+    border: #4d68a1 1px solid;
     border-radius: 10px;
     padding: 2px;
     margin-right: 5px;
@@ -396,8 +407,8 @@ criar-quiz {
 .resultado-box {
     width: 100%;
     display: flex;
-    flex-direction: column;   
-    justify-content: flex-start; 
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .resultado-head {
@@ -421,7 +432,7 @@ criar-quiz {
     text-align: center;
 }
 
-.resultadoHead{
+.resultadoHead {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -432,7 +443,7 @@ criar-quiz {
     text-align: center;
     list-style: none;
     color: #365CAB;
-     margin-bottom: 12px; 
+    margin-bottom: 12px;
 }
 
 .pontuacao-resultado {
@@ -447,7 +458,8 @@ criar-quiz {
     justify-content: space-between;
     list-style: none;
 }
-.pontuacao-resultado-li > * {
+
+.pontuacao-resultado-li>* {
     align-self: center;
 }
 
@@ -456,7 +468,7 @@ criar-quiz {
     width: 50px;
 }
 
-.top3Quiz{
+.top3Quiz {
     width: 60%;
     align-self: center;
     text-align: center;
@@ -486,10 +498,12 @@ criar-quiz {
     display: flex;
     justify-content: center;
 }
-.flexAround{
+
+.flexAround {
     display: flex;
     justify-content: space-around;
 }
+
 .justified-text {
     display: flex;
     justify-content: space-between;
@@ -498,9 +512,11 @@ criar-quiz {
 .aligned-center {
     align-self: center;
 }
-.MEGA{
+
+.MEGA {
     font-size: 3rem;
 }
+
 .valor {
     margin-left: 5px;
     padding-left: 2px;
@@ -525,6 +541,12 @@ ol .nome {
     justify-content: center;
 }
 
+.home-column {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .ranking-container {
     display: flex;
     justify-content: center;
@@ -532,8 +554,8 @@ ol .nome {
 
 .ranking-container ol {
     width: 40%;
-    margin-right:30%;
-    margin-left:30%;
+    margin-right: 30%;
+    margin-left: 30%;
     padding: 20px;
     border: 3px solid #4d68a1;
     background: rgb(228, 228, 228);
@@ -561,6 +583,10 @@ a {
     color: #365CAB;
 }
 
+.opcoes>p>a {
+    color: white;
+}
+
 a:hover {
     text-decoration: underline;
 }
@@ -584,9 +610,9 @@ header {
 }
 
 header input:required {
-    box-shadow:none;
-
+    box-shadow: none;
 }
+
 header a {
     display: flex;
     align-self: center;
@@ -660,13 +686,14 @@ header .logo {
 .caixa {
     padding: 7px;
     display: flex;
-    width: 50vw;
+    width: 80vw;
     min-height: 70vh;
     flex-direction: column;
     justify-content: space-between;
     background: rgb(228, 228, 228);
-    border: 1px #DFE0E4;
-    border-radius: 5px;
+    border: 2px solid #F6F7F9;
+    border-radius: 20px;
+    box-shadow: 0 0 20px grey;
 }
 
 .questions button:hover {
@@ -684,11 +711,11 @@ header .logo {
 .pergunta {
     background: #F6F7F9;
     border: 2px #DFE0E4;
-    border-radius: 5px;
+    border-radius: 20px;
     font-size: 1.3rem;
     text-align: center;
     color: #365CAB;
-    padding: 3px;
+    padding: 5vw;
 }
 
 .top-part button {
@@ -803,7 +830,7 @@ footer article section {
     font-size: 1.1rem;
 }
 
-.user-titulodescricao button{
+.user-titulodescricao button {
     padding: 0.1rem;
     width: 30px;
     height: 30px;
@@ -814,7 +841,8 @@ footer article section {
     border: 2px solid #133783;
     align-self: center;
 }
-.userDetails{
+
+.userDetails {
     background: #F6F7F9;
     border: 3px #DFE0E4;
     border-radius: 75px;
@@ -869,11 +897,6 @@ footer article section {
 .quiz-info-resultado {
     flex: 10;
     justify-content: flex-start;
-}
-
-.quiz-info > img{
-    max-width: 25vw;
-    max-height: 25vh;
 }
 
 .rounded-input {
@@ -935,9 +958,12 @@ button.resposta-button-inline {
 }
 
 .preview-foto {
-    width: 300px;
-    height: 200px;
-    border: 2px solid gray;
+    width: 50vw;
+    height: 30vw;
+    border: 2px solid #133783;
+    border-radius: 10px;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
 }
 
 .modal {
@@ -967,7 +993,7 @@ button.resposta-button-inline {
     padding: 70px 70px 0 70px;
     height: 80vh;
     animation-name: abrir-modal;
-    animation-duration:0.5s;
+    animation-duration: 0.5s;
 }
 
 .foto-Edicao {
@@ -984,27 +1010,86 @@ button.resposta-button-inline {
     border: 1px solid #bdc7d8;
     border-radius: 5px;
 }
-.botao-fechar-edicao{
+
+.botao-fechar-edicao {
     font-size: 1.5rem;
-    color:#000000;
+    color: #000000;
     position: absolute;
     left: 20px;
     top: 15px;
 }
-.texto-edicao-nome{
+
+.texto-edicao-nome {
     left: 27.1px;
     position: relative;
 }
-.form-edicao-descricao{
-        resize:none
+
+.form-edicao-descricao {
+    resize: none
 }
-@keyframes abrir-modal{
-    from{opacity:0; overflow:none; width: 0px; height: 0px; padding: 0px;}
-    to{opacity:1; overflow:auto; width:600px; height:80vh; padding:70px 70px 0 70px}
+
+.createT {
+    font-size: 2rem;
+    margin-bottom: 2vw;
 }
-@keyframes fechar-modal{
-    from{opacity:1; overflow:auto; width:600px; height:80vh; padding:70px 70px 0 70px}
-    to{opacity:0; overflow:none; width: 0px; height: 0px; padding: 0px;}
+
+.createI {
+    width: 40vw;
+    border: 2px solid #133783;
+    border-radius: 10px;
+    align-self: center;
+    margin-top: 1vw;
+    text-align: center;
+    resize: none;
+}
+
+.TAcreate {
+    resize: none;
+    width: 25vw;
+    border: 2px solid #133783;
+    border-radius: 10px;
+    align-self: center;
+}
+
+.createL {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 2vw;
+}
+
+@keyframes abrir-modal {
+    from {
+        opacity: 0;
+        overflow: none;
+        width: 0px;
+        height: 0px;
+        padding: 0px;
+    }
+    to {
+        opacity: 1;
+        overflow: auto;
+        width: 600px;
+        height: 80vh;
+        padding: 70px 70px 0 70px
+    }
+}
+
+@keyframes fechar-modal {
+    from {
+        opacity: 1;
+        overflow: auto;
+        width: 600px;
+        height: 80vh;
+        padding: 70px 70px 0 70px
+    }
+    to {
+        opacity: 0;
+        overflow: none;
+        width: 0px;
+        height: 0px;
+        padding: 0px;
+    }
 }
 
 @media screen and (max-width: 1015px) {
@@ -1084,7 +1169,7 @@ button.resposta-button-inline {
         max-width: 70vw;
     }
     .questions {
-        width: 90vw;        
+        width: 90vw;
         margin: 5%;
         padding: 2%;
     }
